--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,14 @@ body{
     padding: 0;
     margin: 0;
     background: linear-gradient(to right,  #141e30, #243b55);
-    /* background: rgb(255,153,153);
-    background: linear-gradient(to right, rgba(255,153,153,1) 0%, rgba(68,79,90,1)); */
 }
 .calculator-grid{
     display: grid;
     justify-content: center;
     align-content: center;
     min-height: 100vh;
-    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
-    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(8rem, auto) repeat(5, 6rem);
+    grid-template-columns: repeat(4, 6.5rem);
 }
 .calculator-grid button{
     cursor: pointer;
